--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,6 @@
-REPLICATE_API_TOKEN ="enter your replicate API key"
+[theme]
+primaryColor="#F63366"
+backgroundColor="#FFFFFF"
+secondaryBackgroundColor="#F0F2F6"
+textColor="#262730"
+font="sans serif"
